# wahwth

./: .gitmodules  AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  CREDITS.txt  LICENSE.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  Version.cmake
.github/workflows/: main.yml
cmake/: ShowVersion.cmake
release-tool/: prepare-package.ps1  prepare-package.sh  update-pdf-document.sh
resources/: README-ja.md
resources/win/: Install-Wahwth-VST3.bat  Uninstall-Wahwth-VST3.bat
